
2023-01-18  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, NEWS, gnucobol.spec: updated for 3.2rc-1

2023-01-16  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: adjusted hack for AIX 64bit OBJECT_MODE

2023-01-14  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fix to use pdcurses when libcurses was verified

2023-01-05  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (CODE_COVERAGE_IGNORE_PATTERN): add some .def files
	  that have shown to be not useful for code coverage

2022-12-12  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for and substitute PERL/perl

2022-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: tarstamp.h may now be created on base of VCSDATE or
	  FILEDATE, to override specify VCSDATE/FILEDATE=false or with an
	  actual value
	* Makefile.am: tarstamp.h creation more portable, using fallback
	  of current date

2022-12-01  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fixed dependencies, especially for tarstamp.h

2022-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: support BDB_CFLAGS to specify necessary flags like
	  non-default include directory
	* configure.ac: drop check for PDC_free_memory_allocations as that
	  function was removed from PDCursesMod

2022-10-22  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version 3.2-preview

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: cache several checks, also allowing to override its results
	  via gc_cv_keyword_inline, gc_cv_time_timezone, gc_cv_designated_inits,
	  gc_cv_attribute_alligned, gc_cv_attribute_pure, gc_cv_gcc_pipe
	* configure.ac: check ncurses.h also for ncursesw (fixing OpenBSD builds)
	* Makefile.am (CODE_COVERAGE_IGNORE_PATTERN): ignore generated files

2022-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* HACKING: add notes for testing compatibility with GnuCOBOL modules
	  generated by an earlier version of GnuCOBOL

2022-09-21  Simon Sobisch <simonsobisch@gnu.org>
