@@ -1,4 +1,8 @@
 
+2023-02-09  Simon Sobisch <simonsobisch@gnu.org>
+
+	* mlio.c, common.c: handle HAVE_JSON_C_JSON_H
+
 2023-02-06  Simon Sobisch <simonsobisch@gnu.org>
 
 	* numeric.c (cob_decimal_get_packed, cob_decimal_get_display):
